# routers/auth_router.go
@@ -14,4 +14,10 @@ func (router RouterGroup) InitAuthRouter() {
 
 	// 激活账号
 	router.GET("/auth/verify/:token/active/:email", authApi.Verify)
+
+	// 登录
+	router.POST("/auth/login", authApi.Login)
+
+	// 登录验证码
+	router.GET("/auth/login/code", authApi.LoginCode)
 }
